# tuyaopen-platform-t5ai

./: .gitignore  Kconfig  README.md  build_example.sh  default.config
t5_os/: .bk7258_config.save  build.sh  sdk_version.txt  toolchain_get.sh
t5_os/bk_idk/aboot-main/: Makefile  README.md  readme.txt
t5_os/bk_idk/aboot-main/PACK/: generate.bat
t5_os/bk_idk/aboot-main/l_boot/: Makefile
t5_os/bk_idk/aboot-main/platform/diff2ya/: CMakeLists.txt
t5_os/bk_idk/aboot-main/platform/diff2ya/examples/: CMakeLists.txt
t5_os/bk_idk/aboot-main/platform/diff2ya/examples/bootloader/tinyalloc/: tinyalloc.c  tinyalloc.h
t5_os/bk_idk/aboot-main/platform/diff2ya/examples/linux_simulation/: CMakeLists.txt  main.c
t5_os/bk_idk/aboot-main/platform/diff2ya/include/: bsdiff_flash.h  bspatch.h  diff2ya.h  diff2ya_hal.h  tuya_heap_config.h  ty_bsdiff_adapt.h  xz_read.h
t5_os/bk_idk/aboot-main/platform/diff2ya/src/: bsdiff_flash.c  bspatch.c  diff2ya.c  diff2ya_hal.c  tuya_heap_4.c  ty_bsdiff_adapt.c  ty_bsdiff_adapt_fs.c  utils_crc32.c  xz_read.c
t5_os/bk_idk/aboot-main/platform/diff2ya/xz/: CMakeLists.txt  dbglog.h  xz.h  xz_config.h  xz_dec_lzma2.c  xz_dec_stream.c
t5_os/bk_idk/aboot-main/up_boot/: Makefile
t5_os/bk_idk/components/at_server/: at_server.c  at_task.c
t5_os/bk_idk/components/bk_cli/: CMakeLists.txt  Kconfig  cli.h  cli_ble.c  cli_config.h  cli_lwip.c  cli_main.c  cli_misc.c  cli_netif.c  cli_otp.c  cli_phy.c  cli_uart.c  cli_wifi.c  shell_task.c  shell_uart.c
t5_os/bk_idk/components/bk_common/: bk_feature.c
t5_os/bk_idk/components/bk_httpc/: CMakeLists.txt  httpc.c
t5_os/bk_idk/components/bk_https/: bk_ssl.c
t5_os/bk_idk/components/bk_init/: bk_init.c  (+1 more)
t5_os/components/bk_draw_blend/: draw_blend.h  string.c
t5_os/components/display_service/: Kconfig
t5_os/components/freetype/: CMakeLists.txt  Kconfig
t5_os/components/lvgl/: CMakeLists.txt  lv_conf.h  lv_vendor.c
t5_os/docs/bk7258/: Doxyfile
t5_os/extra_components/: CMakeLists.txt
t5_os/projects/tuya_app/: CMakeLists.txt  README.md
tuyaos/tuyaos_adapter/: CMakeLists.txt  Kconfig
tuyaos/tuyaos_adapter/include/bluetooth/: tkl_bluetooth.h  tkl_bluetooth_bredr.h  tkl_bluetooth_def.h  tkl_bluetooth_mesh_def.h  tkl_bluetooth_mesh_device.h  tkl_bluetooth_mesh_prov.h  tkl_bluetooth_sm.h
tuyaos/tuyaos_adapter/include/display/: tkl_display.h
tuyaos/tuyaos_adapter/include/init/include/: tkl_init_cellular.h  tkl_init_common.h  tkl_init_nbiot.h  tkl_init_system.h  tkl_init_wifi.h  tkl_init_wired.h
tuyaos/tuyaos_adapter/include/media/: tkl_audio.h  tkl_isp.h  tkl_video_enc.h  tkl_video_in.h
tuyaos/tuyaos_adapter/include/network/: tkl_network.h
tuyaos/tuyaos_adapter/include/system/: tkl_fs.h
tuyaos/tuyaos_adapter/include/utilities/include/: tuya_cloud_types.h  tuya_hlist.h  tuya_list.h  tuya_slist.h  tuya_tools.h
tuyaos/tuyaos_adapter/include/utilities/src/: tuya_hashmap.c  tuya_list.c  tuya_queue.c  tuya_ringbuf.c  tuya_smartpointer.c  tuya_tools.c
tuyaos/tuyaos_adapter/include/wifi/: tkl_wifi.h
tuyaos/tuyaos_adapter/include/wired/: tkl_wired.h
tuyaos/tuyaos_adapter/src/driver/: tkl_adc.c  tkl_audio.c  tkl_flash.c  tkl_gpio.c  tkl_hci.c  tkl_ipc.c  tkl_pinmux.c  tkl_rtc.c  tkl_uart.c  tkl_video_enc.c  tkl_wakeup.c  tkl_wifi.c
tuyaos/tuyaos_adapter/src/system/: tkl_memory.c  tkl_network.c  tkl_ota.c  tkl_output.c  tkl_sleep.c
tuyaos/tuyaos_adapter/src/test/: bk_adapter.c  cli_tuya_test.c  cli_tuya_test.h  test_adc.c  test_audio.c  test_gpio.c  test_lcd.c  test_pwm.c  test_uart.c  test_wifi.c
(+464 files in other folders)
